# linegenerator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  log-generator.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  dependabot.yml  linters.yml  tests.yml
linegenerator/: llgen.py
src/linegenerator/: __init__.py  cli.py  generator.py  linegenerator.py  presets.py
templates/: example-template.txt  nginx-log-template.txt  web-server-template.txt
tests/: conftest.py  test_cli.py  test_generator.py  test_line_generator.py  test_presets.py
