[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linegenerator"
dynamic = ["version"]
description = "CLI tool for generating log lines with customizable templates"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["linegenerator", "line-generator", "log-generator", "cli-tool", "synthetic data"]
authors = [
    { name = "Vladimir(vldmrdev)", email = "70532790+vldmrdev@users.noreply.github.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer >= 0.16.0",
    "Faker >= 37.5.3",
]

[project.urls]
Homepage = "https://github.com/vldmrdev/linegenerator"
Issues = "https://github.com/vldmrdev/linegenerator/issues"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.version]
path = "src/linegenerator/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/linegenerator"]

[tool.hatch.build.targets.wheel]
include = ["src/linegenerator"]

[project.scripts]
linegenerator-cli = "linegenerator.cli:app"

[project.optional-dependencies]
test = ["pytest"]