[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linegenerator"
dynamic = ["version"]
description = "CLI tool for generating log lines with customizable templates"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["linegenerator", "line-generator", "log-generator", "cli-tool", "synthetic data"]
authors = [
    { name = "Vladimir(vldmrdev)", email = "70532790+vldmrdev@users.noreply.github.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.16.0",
    "Faker>=37.5.3",
]

[project.urls]
Homepage = "https://github.com/vldmrdev/linegenerator"
Issues = "https://github.com/vldmrdev/linegenerator/issues"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.version]
path = "src/linegenerator/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/linegenerator"]

[tool.hatch.build.targets.wheel]
include = ["src/linegenerator"]

[project.scripts]
linegenerator-cli = "linegenerator.cli:app"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock"]
lint = ["ruff", "black", "isort", "mypy", "bandit"]
dev = ["pre-commit"]
all = [
    "linegenerator[test]",
    "linegenerator[lint]",
    "linegenerator[dev]",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", # PEP 8
    "W", # PEP 8
    "ANN", # type annotation
]

ignore = [
  "E501",  # line too long
]
